crates/postgres-subsystem/postgres-core-builder/src/snapshots/column_names_for_non_standard_relational_field_names.snap
---
source: crates/postgres-subsystem/postgres-core-builder/src/resolved_builder.rs
expression: resolved
---
values:
  - - ~
    - Primitive:
        Plain: Boolean
  - - ~
    - Primitive:
        Plain: Int
  - - ~
    - Primitive:
        Plain: Float
  - - ~
    - Primitive:
        Plain: Decimal
  - - ~
    - Primitive:
        Plain: String
  - - ~
    - Primitive:
        Plain: LocalTime
  - - ~
    - Primitive:
        Plain: LocalDateTime
  - - ~
    - Primitive:
        Plain: LocalDate
  - - ~
    - Primitive:
        Plain: Instant
  - - ~
    - Primitive:
        Plain: Json
  - - ~
    - Primitive:
        Plain: Blob
  - - ~
    - Primitive:
        Plain: Uuid
  - - ~
    - Primitive:
        Plain: Vector
  - - ~
    - Composite:
        name: Concert
        plural_name: Concerts
        representation: Managed
        fields:
          - name: id
            typ:
              Plain:
                type_name: Int
                is_primitive: true
            column_names:
              - id
            self_column: true
            is_pk: true
            access:
              default:
                Literal:
                  Boolean:
                    - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            cardinality: ~
            default_value:
              AutoIncrement: ~
            update_sync: false
            readonly: false
            doc_comments: ~
          - name: title
            typ:
              Plain:
                type_name: String
                is_primitive: true
            column_names:
              - title
            self_column: true
            is_pk: false
            access:
              default:
                Literal:
                  Boolean:
                    - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            cardinality: ~
            default_value: ~
            update_sync: false
            readonly: false
            doc_comments: ~
          - name: venuex
            typ:
              Plain:
                type_name: Venue
                is_primitive: false
            column_names:
              - venuex_id
            self_column: true
            is_pk: false
            access:
              default:
                Literal:
                  Boolean:
                    - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            cardinality: Unbounded
            default_value: ~
            update_sync: false
            readonly: false
            doc_comments: ~
          - name: published
            typ:
              Plain:
                type_name: Boolean
                is_primitive: true
            column_names:
              - published
            self_column: true
            is_pk: false
            access:
              default:
                Literal:
                  Boolean:
                    - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            cardinality: ~
            default_value: ~
            update_sync: false
            readonly: false
            doc_comments: ~
        table_name:
          name: concerts
          schema: ~
        access:
          default: ~
          query: ~
          mutation: ~
          creation: ~
          update: ~
          delete: ~
        projection_exprs: []
        doc_comments: ~
  - - ~
    - Composite:
        name: Venue
        plural_name: Venues
        representation: Managed
        fields:
          - name: id
            typ:
              Plain:
                type_name: Int
                is_primitive: true
            column_names:
              - id
            self_column: true
            is_pk: true
            access:
              default:
                Literal:
                  Boolean:
                    - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            cardinality: ~
            default_value:
              AutoIncrement: ~
            update_sync: false
            readonly: false
            doc_comments: ~
          - name: name
            typ:
              Plain:
                type_name: String
                is_primitive: true
            column_names:
              - name
            self_column: true
            is_pk: false
            access:
              default:
                Literal:
                  Boolean:
                    - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            cardinality: ~
            default_value: ~
            update_sync: false
            readonly: false
            doc_comments: ~
          - name: concerts
            typ:
              List:
                Plain:
                  type_name: Concert
                  is_primitive: false
            column_names:
              - venuex_id
            self_column: false
            is_pk: false
            access:
              default:
                Literal:
                  Boolean:
                    - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            cardinality: One
            default_value: ~
            update_sync: false
            readonly: false
            doc_comments: ~
          - name: published
            typ:
              Plain:
                type_name: Boolean
                is_primitive: true
            column_names:
              - published
            self_column: true
            is_pk: false
            access:
              default:
                Literal:
                  Boolean:
                    - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            cardinality: ~
            default_value: ~
            update_sync: false
            readonly: false
            doc_comments: ~
        table_name:
          name: venues
          schema: ~
        access:
          default: ~
          query: ~
          mutation: ~
          creation: ~
          update: ~
          delete: ~
        projection_exprs: []
        doc_comments: ~
  - ~
map:
  Blob:
    index: 10
    generation: ~
  Boolean:
    index: 0
    generation: ~
  Concert:
    index: 13
    generation: ~
  Decimal:
    index: 3
    generation: ~
  Float:
    index: 2
    generation: ~
  Instant:
    index: 8
    generation: ~
  Int:
    index: 1
    generation: ~
  Json:
    index: 9
    generation: ~
  LocalDate:
    index: 7
    generation: ~
  LocalDateTime:
    index: 6
    generation: ~
  LocalTime:
    index: 5
    generation: ~
  String:
    index: 4
    generation: ~
  Uuid:
    index: 11
    generation: ~
  Vector:
    index: 12
    generation: ~
  Venue:
    index: 14
    generation: ~
